<resources>
    <string name="app_name">TicTacToe</string>

    <!-- image alts -->
    <string name="img_logo_alt">Logo</string>

    <!-- text views -->
    <string name="txt_menu_caption">Select a game type:</string>

    <!-- button texts -->
    <string name="btn_menu_player">Player vs. Player</string>
    <string name="btn_menu_computer">Player vs. Computer</string>
    <string name="btn_end_playagain">Play again</string>
    <string name="btn_end_mainmenu">Main menu</string>

    <!-- game messages -->
    <string name="txt_game_turn_p1">Player 1\'s Turn</string>
    <string name="txt_game_turn_p2">Player 2\'s Turn</string>

    <string name="txt_game_turn_p">Player\'s Turn</string>
    <string name="txt_game_turn_c">Computer\'s Turn</string>

    <!-- winning displays-->
    <string name="display_winner_pl1">Player 1 wins!</string>
    <string name="display_winner_pl2">Player 2 wins!</string>
    <string name="display_winner_c">Computer wins!</string>
    <string name="display_winner_d">It\'s a draw!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_winner_display">winnerDisplay</string>
    <string name="main_Menu">Main Menu</string>

    <string name="imageView">img</string>
</resources>
