<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.csci343.andy.tictactoe.MenuActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/img_logo_alt"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="false"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="32dp">

        <TextView
            android:text="@string/txt_menu_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtResult"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Button
            android:text="@string/btn_menu_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnMenu_Player"
            style="@style/Widget.AppCompat.Button"
            android:onClick="onClick" />

        <Button
            android:text="@string/btn_menu_computer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnMenu_Computer"
            android:onClick="onClick" />

    </LinearLayout>
</RelativeLayout>
